third_party/rust/chromium_crates_io/vendor/cxx-1.0.131/tests/ui/enum_inconsistent.stderr
error: expected u16, found i64
 --> tests/ui/enum_inconsistent.rs:5:9
  |
5 |         B = 2i64,
  |         ^^^^^^^^
